add katex preloads (see #2)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "phet": {
     "requirejsNamespace": "VECTOR_ADDITION",
     "runnable": true,
+    "preload": [
+      "../sherpa/lib/katex-0.5.1-css-all.js",
+      "../sherpa/lib/katex-0.5.1.min.js"
+    ],
     "supportedBrands": [
       "phet",
       "adapted-from-phet"
