--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "grunt": "~1.0.0"
   },
   "phet": {
+    "phetLibs": [
+      "twixt"
+    ],
     "requirejsNamespace": "VECTOR_ADDITION",
     "runnable": true,
     "preload": [
