--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     ],
     "simulation": true,
     "supportsOutputJS": true,
-    "published": true
+    "published": true,
+    "screenNameKeys": [
+      "VECTOR_ADDITION/screen.explore1D",
+      "VECTOR_ADDITION/screen.explore2D",
+      "VECTOR_ADDITION/screen.lab",
+      "VECTOR_ADDITION/screen.equations"
+    ]
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js",
