Convert tsconfig to use project references, see https://github.com/phetsims/chipper/issues/1356

--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
               "ts-nocheck": true
             }
           ]
+        },
+        "parserOptions": {
+          "project": [
+            "../vector-addition/tsconfig.json"
+          ]
         }
       }
     ]
