--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vector-addition",
-  "version": "1.1.0-dev.5",
+  "version": "1.1.0-rc.0",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
