--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "adapted-from-phet"
     ],
     "simFeatures": {
+      "supportsSound": true,
       "supportsDynamicLocale": true,
       "colorProfiles": [
         "default"
