--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ],
     "simFeatures": {
       "supportsSound": true,
+      "supportsInteractiveDescription": true,
       "supportsDynamicLocale": true,
       "colorProfiles": [
         "default"
