opt out of CT phet-io validation, https://github.com/phetsims/vector-addition/issues/258

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "default"
       ]
     },
+    "phet-io": {
+      "validation": false
+    },
     "simulation": true,
     "supportsOutputJS": true,
     "published": true,
