add "supportsTier1Voicing": true

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
       "supportsSound": true,
       "supportsInteractiveDescription": true,
       "supportsDynamicLocale": true,
+      "supportsTier1Voicing": true,
       "colorProfiles": [
         "default"
       ]
