fix instrumentation of angleVisibleProperty, add compareDesignedAPIChanges: true, https://github.com/phetsims/vector-addition/issues/295

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       ]
     },
     "phet-io": {
-      "validation": false
+      "compareDesignedAPIChanges": true
     },
     "simulation": true,
     "supportsOutputJS": true,
